Carme-Frontend/Carme-Django/static/css/theme.css
@charset "UTF-8";

/* ------------------------------------------------------------------------------ */
/*                              Carme Colors: root                                */
/* ------------------------------------------------------------------------------ */

:root {

  /*----------------------------------- Hex --------------------------------------*/

  /* main */
  --carme-primary: #2c7be5;
  --carme-secondary: #748194;
  --carme-success: #00d27a;
  --carme-info: #27bcfd;
  --carme-warning: #f5803e;
  --carme-danger: #e63757;
  --carme-light: #e9ecef;
  --carme-dark: #1a2431;

  /* grayscale */
  --carme-gray-100: #f9fafd;
  --carme-gray-200: #edf2f9;
  --carme-gray-300: #d8e2ef;
  --carme-gray-400: #b6c1d2;
  --carme-gray-500: #9da9bb;
  --carme-gray-600: #748194;
  --carme-gray-700: #5e6e82;
  --carme-gray-800: #4d5969;
  --carme-gray-900: #344050;
  --carme-gray-1000: #232e3c;
  --carme-gray-1100: #121e2d;
  --carme-gray-1200: #0b1727;

  /* colors */
  --carme-purple: #6b5eae;
  --carme-indigo: #727cf5;
  --carme-navy: #163e73;
  --carme-blue: #007bff;
  --carme-sky: #96bdf2;
  --carme-cyan: #1fa1d8;
  --carme-teal: #02a8b5;
  --carme-green: #00d27a;
  --carme-orange: #f5803e;
  --carme-pink: #ff679b;
  --carme-red: #e63757;
  --carme-white: #fff;
  --carme-gray: #748194;
  --carme-black: #000;

  /*------------------------------------ RGB -------------------------------------*/

  /* main */
  --carme-primary-rgb: 44, 123, 229;
  --carme-secondary-rgb: 116, 129, 148;
  --carme-success-rgb: 0, 210, 122;
  --carme-info-rgb: 39, 188, 253;
  --carme-warning-rgb: 245, 128, 62;
  --carme-danger-rgb: 230, 55, 87;
  --carme-light-rgb: 233, 236, 239;
  --carme-dark-rgb: 26, 36, 49;

  /* grayscale */
  --carme-gray-100-rgb: 249, 250, 253;
  --carme-gray-200-rgb: 237, 242, 249;
  --carme-gray-300-rgb: 216, 226, 239;
  --carme-gray-400-rgb: 182, 193, 210;
  --carme-gray-500-rgb: 157, 169, 187 ;
  --carme-gray-600-rgb: 116, 129, 148;
  --carme-gray-700-rgb: 94, 110, 130;
  --carme-gray-800-rgb: 77, 89, 105;
  --carme-gray-900-rgb: 52, 64, 80;
  --carme-gray-1000-rgb: 35, 46, 60;
  --carme-gray-1100-rgb: 18, 30, 45;
  --carme-gray-1200-rgb: 11, 23, 39;

  /* colors */
  --carme-purple-rgb: 107, 94, 174;
  --carme-indigo-rgb: 114, 124, 245;
  --carme-navy-rgb: 22,62, 115;
  --carme-blue-rgb: 0, 123, 255;
  --carme-sky-rgb: 150, 189, 242;
  --carme-cyan-rgb: 31, 161, 216;
  --carme-teal-rgb: 2, 168, 181;
  --carme-green-rgb: 0, 210, 122;
  --carme-orange-rgb: 245, 128, 62;
  --carme-pink-rgb: 255, 103, 155;
  --carme-red-rgb: 230, 55, 87;
  --carme-white-rgb: 255, 255, 255;
  --carme-gray-rgb: 116, 129, 148;
  --carme-black-rgb: 0, 0, 0;


  /*---------------------------- Light / Dark Mode -------------------------------*/

  /* body-bg */
  --carme-light-mode: rgba(var(--carme-gray-200-rgb),0.6);
  --carme-dark-mode:  rgba(var(--carme-gray-1200-rgb),1.0);
}
/* ... */

